--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -10,9 +10,7 @@
 }
 
 .main-hero {
-    height: 120vh;
-    background: url('./bg.png');
-    background-size: cover;
+    height: 100vh;
     position: relative;
 }
 
@@ -25,16 +23,47 @@
 }
 
 .top-content h1 {
-    color: white;
-    font-size: 3rem;
+    color: maroon;
+    font-weight: 300;
+    text-transform: uppercase;
+    font-size: 5rem;
+    display: flex;
+    flex-direction: column;
+    transition: .3s;
+}
+
+.top-content h1:hover{
+    letter-spacing: 10px;
+    cursor:default;
 }
 
 .top-content h2 {
-    color: white;
-    font-size: 1.8rem;
+    text-transform: uppercase;
     font-weight: 300;
-    margin-top: 10px;
+    border-bottom: 1px solid;
 }
+
+.top-content h1 span{
+    transition: .3s;
+}
+
+.top-content h1 span:nth-child(1) {
+    margin-left: 0px;
+    width: fit-content;
+}
+
+.top-content h1 span:nth-child(2) {
+    margin-left: 100px;
+}
+
+.top-content h1 span:nth-child(3) {
+    margin-left: 200px;
+}
+
+.top-content h1 span:nth-child(4) {
+    margin-left: 300px;
+}
+
 
 .top-content a {
     font-size: 1.8rem;
@@ -46,7 +75,7 @@
 
 .bottom-content {
     position: absolute;
-    bottom: 0;
+    bottom: 12vh;
     right: 20px;
 }
 
@@ -87,7 +116,7 @@
 
 .content p:last-child span,
 .bottom-content p span {
-    background-image: linear-gradient(45deg, orange, rgba(255, 255, 255, 0.226));
+    background-image: linear-gradient(45deg, maroon, rgba(255, 255, 255, 0.226));
     color: transparent;
     background-clip: text;
 }
@@ -102,7 +131,7 @@
 
 
 .main-carousel::-webkit-scrollbar {
-    background: orange;
+    background: maroon;
     border-radius: 10px;
     width: 10px;
 }
@@ -172,7 +201,7 @@
 .main-step h1 {
     width: 65px;
     height: 65px;
-    background: orange;
+    background: maroon;
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -237,7 +266,7 @@ ul {
 }
 
 .tab-active {
-    color: orange;
+    color: maroon;
     font-size: 1.6rem;
     font-weight: 900;
     cursor: pointer;
@@ -270,7 +299,7 @@ ul {
 
 .right-main .content h1 {
     font-size: 3rem;
-    color: orange;
+    color: maroon;
 }
 
 .right section img {
@@ -305,7 +334,7 @@ ul {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: orange;
+    background: maroon;
     color: white;
     font-size: 1.2rem;
     border-radius: 50%;
@@ -398,17 +427,17 @@ ul {
     gap: 50px;
 }
 
-.inquiry section{
+.inquiry section {
     display: flex;
     gap: 100px;
 }
 
-.inquiry p{
+.inquiry p {
     font-weight: 300;
     font-size: 1.2rem;
 }
 
-.inquiry .main{
+.inquiry .main {
     padding: 50px;
     display: flex;
     justify-content: center;
@@ -416,17 +445,17 @@ ul {
     flex-direction: column;
 }
 
-.inquiry .main img{
+.inquiry .main img {
     width: 100px;
-    color: orange;
+    color: maroon;
     margin-bottom: 20px;
 }
 
-.inquiry .main i{
+.inquiry .main i {
     font-size: 150px;
 }
 
-.inquiry .main a{
+.inquiry .main a {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -435,9 +464,10 @@ ul {
     color: black;
 }
 
-.inquiry .main:nth-child(1) a i{
-    color: orange;
+.inquiry .main:nth-child(1) a i {
+    color: maroon;
 }
-.inquiry .main:nth-child(2) a i{
+
+.inquiry .main:nth-child(2) a i {
     color: blueviolet;
 }
