--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Philosopher&family=Roboto+Slab:wght@100;200;300;400;500;900&family=Roboto:ital,wght@0,300;0,500;0,700;1,100&display=swap');*{
+@import url("https://fonts.googleapis.com/css2?family=Philosopher&family=Roboto+Slab:wght@100;200;300;400;500;900&family=Roboto:ital,wght@0,300;0,500;0,700;1,100&display=swap");
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+* {
   margin: 0;
   padding: 0;
-  font-family: 'Philosopher';
+  font-family: "Philosopher";
 }
