--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -421,17 +421,17 @@ ul {
 }
 
 .inquiry .main-image {
-    padding: 50px;
+    padding: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
 
-.inquiry .main-image img {
-    width: 250px;
-    height: 150px;
+.inquiry .main-image i {
+    font-size: 5rem;
     margin-bottom: 20px;
+    color: maroon;
 }
 
 .inquiry .main-image a {
@@ -488,6 +488,8 @@ ul {
 .main-review .main-message p{
     max-width: 500px;
     margin-top: 10px;
+    font-size: .9rem;
+    line-height: 20px;
 }
 
 .reviews .main-review .top {
