--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -421,8 +421,8 @@ ul {
 }
 
 .inquiry .main-image {
-    padding: 100px;
     display: flex;
+    padding: 100px;
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -619,9 +619,8 @@ ul {
         overflow: hidden;
     }
 
-    .inquiry .main-image img {
-        width: 100px;
-        height: 50px;
+    .inquiry .main-image {
+        padding: 20px;
     }
 
     .inquiry section {
