--- a/src/Styles/Software.css
+++ b/src/Styles/Software.css
@@ -45,29 +45,118 @@
 
 .sectionTwo {
   display: flex;
-  max-height: 70vh;
+  height: 60vh;
   overflow: hidden;
 }
 .sectionTwo .sub-section-1 {
-  width: 200px;
+  width: 300px;
   display: flex;
   flex-direction: column;
   padding: 20px;
-  gap: 100px;
+  gap: 50px;
 }
 .sectionTwo .sub-section-1 .c-1 {
+  margin-top: 20px;
   font-size: 1.3rem;
   color: gray;
 }
 .sectionTwo .sub-section-1 .radio-btn {
   display: flex;
-  flex-direction: column;
-}
-.sectionTwo .sub-section-1 .radio-btn div {
-  display: flex;
   gap: 10px;
+  flex-direction: column;
+  font-size: 1.2rem;
+}
+.sectionTwo .sub-section-1 .radio-btn input {
+  display: none;
+}
+.sectionTwo .sub-section-1 .radio-btn input:checked ~ label {
+  color: #8b00f8;
+  font-weight: bold;
+}
+.sectionTwo .sub-section-1 .radio-btn > div {
+  text-align: right;
+  font-size: 1.3rem;
+  font-weight: bold;
+  color: gray;
 }
 .sectionTwo .sub-section-2 {
-  width: calc(100vw - 200px);
-  background-color: orange;
+  width: 100%;
+  overflow: hidden;
+}
+.sectionTwo .sub-section-2 .slide {
+  display: flex;
+  transition: 0.3s ease;
+  width: 500%;
+  position: relative;
+}
+.sectionTwo .sub-section-2 .slide .data {
+  width: 100%;
+  display: flex;
+  padding: 10px;
+}
+.sectionTwo .sub-section-2 .slide .data h1 {
+  margin: 20px 0px;
+  color: #8b00f8;
+}
+.sectionTwo .sub-section-2 .slide .data .content {
+  color: rgba(128, 128, 128, 0.753);
+}
+.sectionTwo .sub-section-2 .slide .data .title {
+  color: gray;
+  margin: 20px 0px;
+  font-size: 1.3rem;
+}
+.sectionTwo .sub-section-2 .slide .data ul {
+  padding: 0px;
+  counter-reset: custom;
+  list-style-type: none;
+}
+.sectionTwo .sub-section-2 .slide .data ul li {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  color: gray;
+  counter-increment: custom;
+}
+.sectionTwo .sub-section-2 .slide .data ul li:before {
+  content: counters(custom, ".") " ";
+  width: 30px;
+  height: 30px;
+  margin-right: 10px;
+  background: purple;
+  color: #fff;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.sectionTwo .sub-section-2 .slide .data img {
+  width: 50%;
+}
+
+.sectionThree {
+  height: 87vh;
+  overflow: hidden;
+  padding: 0px 40px;
+  color: gray;
+}
+.sectionThree h1 {
+  margin-top: 50px;
+}
+.sectionThree .main-container {
+  color: #333333;
+  font-weight: 500;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  align-items: end;
+  margin-top: 50px;
+  gap: 20px 30px;
+}
+.sectionThree .main-container .iconMenu {
+  display: flex;
+  gap: 20px;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }/*# sourceMappingURL=Software.css.map */
