--- a/src/Styles/Software.scss
+++ b/src/Styles/Software.scss
@@ -44,29 +44,121 @@
 
 .sectionTwo {
   display: flex;
-  max-height: 70vh;
+  height: 60vh;
+
   overflow: hidden;
   .sub-section-1 {
-    width: 200px;
+    width: 300px;
     display: flex;
     flex-direction: column;
     padding: 20px;
-    gap: 100px;
+    gap: 50px;
     .c-1 {
+      margin-top: 20px;
       font-size: 1.3rem;
       color: gray;
     }
     .radio-btn {
       display: flex;
+      gap: 10px;
       flex-direction: column;
-      div {
-        display: flex;
-        gap: 10px;
+      font-size: 1.2rem;
+      input {
+        display: none;
+      }
+      input:checked ~ label {
+        color: #8b00f8;
+        font-weight: bold;
+      }
+      & > div {
+        text-align: right;
+        font-size: 1.3rem;
+        font-weight: bold;
+        color: gray;
       }
     }
   }
   .sub-section-2 {
-    width: calc(100vw - 200px);
-    background-color: orange;
+    width: 100%;
+    overflow: hidden;
+    .slide {
+      display: flex;
+      transition: 0.3s ease;
+      width: 500%;
+      position: relative;
+      .data {
+        width: 100%;
+        display: flex;
+        padding: 10px;
+        h1 {
+          margin: 20px 0px;
+          color: #8b00f8;
+        }
+        .content {
+          color: rgba(128, 128, 128, 0.753);
+        }
+        .title {
+          color: gray;
+          margin: 20px 0px;
+          font-size: 1.3rem;
+        }
+
+        ul {
+          padding: 0px;
+          counter-reset: custom;
+          list-style-type: none;
+          li {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            color: gray;
+            counter-increment: custom;
+            &:before {
+              content: counters(custom, ".") " ";
+              width: 30px;
+              height: 30px;
+              margin-right: 10px;
+              background: purple;
+              color: #fff;
+              border-radius: 50%;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+            }
+          }
+        }
+        img {
+          width: 50%;
+        }
+      }
+    }
+  }
+}
+
+.sectionThree {
+  height: calc(87vh);
+  overflow: hidden;
+  padding: 0px 40px;
+  color: gray;
+
+  h1 {
+    margin-top: 50px;
+  }
+  .main-container {
+    color: #333333;
+    font-weight: 500;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    align-items: end;
+    margin-top: 50px;
+    gap: 20px 30px;
+    .iconMenu {
+      display: flex;
+      gap: 20px;
+      text-align: center;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+    }
   }
 }
