--- a/src/Styles/Started.css
+++ b/src/Styles/Started.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
-.main {
+.s-main {
   margin-top: 10vh;
   padding: 10px;
   max-width: 1680px;
@@ -8,72 +8,71 @@
   margin-right: auto;
   font-family: Roboto, san-sarif;
 }
-
-.section-1 {
+.s-main .section-1 {
   display: flex;
   gap: 10px;
 }
-.section-1 > * {
+.s-main .section-1 > * {
   width: 800px;
   padding: 10px;
 }
-.section-1 .sub-section-1 .gray-text {
+.s-main .section-1 .sub-section-1 .gray-text {
   color: gray;
   margin: 20px 0px;
 }
-.section-1 .sub-section-1 .items {
+.s-main .section-1 .sub-section-1 .items {
   margin: 70px 10px;
   display: flex;
   gap: 10px;
   flex-wrap: wrap;
   color: gray;
 }
-.section-1 .sub-section-1 .items .item {
+.s-main .section-1 .sub-section-1 .items .item {
   margin: 10px 0px;
   width: calc(50% - 15px);
   display: flex;
   gap: 10px;
   align-items: center;
 }
-.section-1 .sub-section-1 .items .item .blue {
+.s-main .section-1 .sub-section-1 .items .item .blue {
   color: dodgerblue;
   font-weight: bold;
   margin: 5px;
 }
-.section-1 .sub-section-2 {
+.s-main .section-1 .sub-section-2 {
   width: 600px;
   margin: 50px 50px 0px 0px;
   padding: 40px 20px;
   border-radius: 20px;
   box-shadow: 5px 5px 20px rgba(136, 136, 136, 0.3960784314);
 }
-.section-1 .sub-section-2 > *:first-child {
+.s-main .section-1 .sub-section-2 > *:first-child {
   display: flex;
   flex-direction: column;
   gap: 10px;
 }
-.section-1 .sub-section-2 > *:first-child *:first-child {
+.s-main .section-1 .sub-section-2 > *:first-child *:first-child {
   font-size: 2rem;
   color: #8b00f8;
 }
-.section-1 .sub-section-2 > *:first-child *:nth-child(2) {
+.s-main .section-1 .sub-section-2 > *:first-child *:nth-child(2) {
   color: gray;
 }
-.section-1 .sub-section-2 > *:nth-child(2) {
+.s-main .section-1 .sub-section-2 > *:nth-child(2) {
   color: gray;
   text-align: center;
 }
-.section-1 .sub-section-2 .form-style {
+.s-main .section-1 .sub-section-2 .form-style {
   display: flex;
   flex-direction: column;
   gap: 20px;
   margin-top: 20px;
 }
-.section-1 .sub-section-2 .form-style > div {
+.s-main .section-1 .sub-section-2 .form-style > div {
   display: flex;
   gap: 10px;
 }
-.section-1 .sub-section-2 .form-style > div > input {
+.s-main .section-1 .sub-section-2 .form-style > div > input {
   outline: none;
   border: none;
   background-color: #f3f5f9;
@@ -81,7 +80,7 @@
   padding: 10px;
   border-radius: 20px;
 }
-.section-1 .sub-section-2 .form-style > div > input:focus {
+.s-main .section-1 .sub-section-2 .form-style > div > input:focus {
   outline: 3px solid rgba(141, 0, 248, 0.2117647059);
 }
 
@@ -100,8 +99,7 @@ button.purple:hover {
   outline: 3px solid rgba(141, 0, 248, 0.2117647059);
   color: white;
 }
-
-button.blue {
+button.purple button.blue {
   padding: 20px;
   border: 1px solid dodgerblue;
   font-size: 1.2rem;
@@ -111,39 +109,38 @@ button.blue {
   border-radius: 10px;
   transition: 0.1s ease-in;
 }
-button.blue:hover {
+button.purple button.blue:hover {
   background-color: dodgerblue;
   outline: 3px solid rgba(30, 143, 255, 0.479);
   color: white;
 }
-
-.section-3 {
+button.purple .section-3 {
   margin: 40px 10px;
 }
-.section-3 h1 {
+button.purple .section-3 h1 {
   font-size: 3rem;
   color: #8b00f8;
   margin: 40px 20px;
 }
-.section-3 .accordion {
+button.purple .section-3 .accordion {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
 }
-.section-3 .accordion .accord {
+button.purple .section-3 .accordion .accord {
   width: calc(50% - 30px);
   border-radius: 10px;
 }
-.section-3 .accordion .accord :checked ~ label {
+button.purple .section-3 .accordion .accord :checked ~ label {
   border-radius: 10px 10px 0px 0px;
   background-color: rgba(141, 0, 248, 0.2117647059);
   color: #8b00f8;
   outline: 3px solid rgba(141, 0, 248, 0.3215686275);
 }
-.section-3 .accordion .accord :checked ~ label:after {
+button.purple .section-3 .accordion .accord :checked ~ label:after {
   transform: rotate(180deg) scale(2.5, 1);
 }
-.section-3 .accordion .accord label {
+button.purple .section-3 .accordion .accord label {
   padding: 20px;
   display: block;
   box-shadow: 1px 1px 2px rgba(128, 128, 128, 0.432);
@@ -151,7 +148,7 @@ button.blue:hover {
   cursor: pointer;
   position: relative;
 }
-.section-3 .accordion .accord label:after {
+button.purple .section-3 .accordion .accord label:after {
   font-weight: bold;
   position: absolute;
   height: -moz-min-content;
@@ -163,10 +160,10 @@ button.blue:hover {
   z-index: 2;
   right: 30px;
 }
-.section-3 .accordion .accord input {
+button.purple .section-3 .accordion .accord input {
   display: none;
 }
-.section-3 .accordion .accord .hide {
+button.purple .section-3 .accordion .accord .hide {
   padding: 20px;
   display: none;
   max-height: 0;
@@ -177,13 +174,12 @@ button.blue:hover {
   line-height: 1.5;
   color: rgb(49, 49, 49);
 }
-.section-3 .accordion .accord > input:checked ~ div {
+button.purple .section-3 .accordion .accord > input:checked ~ div {
   display: block;
   max-height: -moz-min-content;
   max-height: min-content;
 }
-
-.section-2 {
+button.purple .section-2 {
   margin: 50px 40px 20px;
 }
 
