--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Philosopher&family=Roboto+Slab:wght@100;200;300;400;500;900&family=Roboto:ital,wght@0,300;0,500;0,700;1,100&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Philosopher&family=Roboto+Slab:wght@100;200;300;400;500;900&family=Roboto:ital,wght@0,300;0,500;0,700;0,900;1,100&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
