--- a/src/Styles/Swiper.css
+++ b/src/Styles/Swiper.css
@@ -16,10 +16,8 @@
 }
 
 .swiper-slide img {
-    display: block;
-    width: 100%;
+    width: 1000px;
     height: 100%;
-    object-fit: cover;
 }
 
 .swiper-pagination-bullet {
