--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -12,7 +12,7 @@
 .main-hero {
     height: 100vh;
     position: relative;
-    background: url('./bg.jpg');
+    background-image: url('./bg.jpg');
     background-size: cover;
 }
 
