--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -28,8 +28,9 @@
 }
 
 .logo img {
-    width: 60px;
-    height: 40px;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
 }
 
 .logo a h2 {
