--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -12,7 +12,7 @@
 .main-hero {
     height: 100vh;
     position: relative;
-    background-image: url('./bg.jpg');
+    background-image: url('./bg.svg');
     background-size: cover;
 }
 
@@ -25,10 +25,10 @@
 }
 
 .top-content h1 {
-    color: maroon;
+    color: white;
     font-weight: 900;
     text-transform: uppercase;
-    font-size: 5rem;
+    font-size: 4rem;
     display: flex;
     flex-direction: column;
     transition: .3s;
@@ -41,7 +41,7 @@
 .top-content h2 {
     text-transform: uppercase;
     font-weight: 300;
-    border-bottom: 1px solid;
+    color: wheat;
 }
 
 .top-content h1 span {
