--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -12,7 +12,8 @@
 .main-hero {
     height: 100vh;
     position: relative;
-    background-image: url('./bg.svg');
+    background: blueviolet;
+    /* background-image: url('./bg.svg'); */
     background-size: cover;
 }
 
@@ -28,7 +29,7 @@
     color: white;
     font-weight: 900;
     text-transform: uppercase;
-    font-size: 4rem;
+    font-size: 5rem;
     display: flex;
     flex-direction: column;
     transition: .3s;
@@ -84,6 +85,7 @@
     font-size: 1.1rem;
     font-weight: 300;
     width: 340px;
+    color: white;
 }
 
 
@@ -118,7 +120,7 @@
 
 .content p:last-child span,
 .bottom-content p span {
-    background-image: linear-gradient(45deg, maroon, rgba(255, 255, 255, 0.226));
+    background-image: linear-gradient(45deg, white, rgba(255, 255, 255, 0.226));
     color: transparent;
     background-clip: text;
 }
@@ -133,14 +135,15 @@
 
 
 .main-carousel::-webkit-scrollbar {
-    background: maroon;
+    background: rgba(255, 255, 255, 0.226);
     border-radius: 10px;
     width: 10px;
 }
 
 .main-carousel::-webkit-scrollbar-thumb {
-    background: rgba(255, 255, 255, 0.2);
+    background: white;
     width: 5px;
+    border-radius: 10px;
 }
 
 .main-carousel .main-tags h1 {
@@ -149,6 +152,7 @@
     justify-content: center;
     display: flex;
     align-items: center;
+    color: rgba(255, 255, 255, 0.8);
 }
 
 .steps {
